--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "couch-face",
+  "name": "couchman",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,10 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
+    "bootstrap": "^4.5.0",
+    "bootstrap-vue": "^2.15.0",
     "core-js": "^3.6.5",
+    "localforage": "^1.7.4",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "vuex-map-fields": "^1.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
