--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "localforage": "^1.7.4",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0",
-    "vuex-map-fields": "^1.4.0"
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
