--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "couchman",
+  "description": "A multi-instance CouchDB manager with filtering, sorting, and a simple view system. Meant to be simple, intuitive, and persistent.",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
