--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "npm run gulp:sass && vue-cli-service build",
     "lint": "vue-cli-service lint",
     "image:build": "docker build -t kovee98/couchman:test .",
     "image:push": "docker push kovee98/couchman:test",
-    "image:run": "docker run -it -p 8080:8080 --rm --name couchman-test kovee98/couchman:test"
+    "image:run": "docker run -it -p 8080:8080 --rm --name couchman-test kovee98/couchman:test",
+    "gulp:sass": "npx gulp sass"
   },
   "dependencies": {
     "bootstrap": "^4.5.0",
@@ -35,7 +36,10 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
-    "node-sass": "^4.12.0",
+    "gulp": "^4.0.2",
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^4.1.0",
+    "node-sass": "^4.14.1",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
   }
