--- a/package.json
+++ b/package.json
@@ -10,7 +10,14 @@
     "image:build": "docker build -t kovee98/couchman:test .",
     "image:push": "docker push kovee98/couchman:test",
     "image:run": "docker run -d -p 8080:80 --name couchman-test kovee98/couchman:test",
-    "gulp:sass": "npx gulp sass"
+    "gulp:sass": "npx gulp sass",
+    "bump-version": "npm version --no-git-tag-version $VERSION",
+    "compress": "zip -jr release-$VERSION.zip dist && tar -zcf release-$VERSION.tar.gz dist"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
   },
   "dependencies": {
     "bootstrap": "^4.5.0",
@@ -23,6 +30,12 @@
     "vuex": "^3.4.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^9.1.2",
+    "@commitlint/config-conventional": "^9.1.2",
+    "@semantic-release/changelog": "^5.0.1",
+    "@semantic-release/exec": "^5.0.0",
+    "@semantic-release/git": "^9.0.0",
+    "@semantic-release/github": "^7.0.7",
     "@vue/cli-plugin-babel": "~4.4.0",
     "@vue/cli-plugin-eslint": "~4.4.0",
     "@vue/cli-plugin-router": "~4.4.0",
@@ -39,8 +52,10 @@
     "gulp": "^4.0.2",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.1.0",
+    "husky": "^4.2.5",
     "node-sass": "^4.14.1",
     "sass-loader": "^8.0.2",
+    "semantic-release": "^17.1.1",
     "vue-template-compiler": "^2.6.11"
   }
 }
