--- a/.releaserc
+++ b/.releaserc
@@ -2,7 +2,9 @@
   "plugins": [
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
-    "@semantic-release/changelog",
+    ["@semantic-release/changelog", {
+      "changelogTitle": "# Changelog\nAll notable changes to this project will be documented in this file.\n\nThe format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),\nand this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html)."
+    }],
     ["@semantic-release/exec", {
       "prepareCmd": "VERSION=${nextRelease.version} npm run bump-version"
     }],
