--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "node-sass": "^4.14.1",
     "sass-loader": "^8.0.2",
     "semantic-release": "^17.1.1",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "worker-loader": "^3.0.2"
   }
 }
